[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "Admin scripts and API"
name = "admin"
version = "0.1.2"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.9.15"
environs = "^9.5.0"
httpx = "^0.25.0"
libapi = {path = "../../libs/libapi", develop = true}
requests = "^2.28.2"
starlette = "^0.28.0"
starlette-prometheus = "^0.9.0"
uvicorn = "^0.20.0"
watchdog = { extras = ["watchmedo"], version = "^2.2.1" }

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
huggingface-hub = "^0.16.4"
mypy = "^1.0.0"
pip-audit = "^2.5.4"
pytest = "^7.2.1"
pytest-cov = "^2.12.1"
pytest-httpx = "^0.26.0"
ruff = "^0.1.3"
types-psutil = "^5.9.5"
types-requests = "^2.28.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "real_dataset: tests on the Hub",
    "wip: tests being developed"
]

[tool.coverage.run]
source = ["admin"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "huggingface_hub.*",
    "prometheus_client.*"
]
ignore_missing_imports = true
# ^ prometheus_client is now typed, but starlette-prometheus requires an old version

[tool.ruff]
line-length = 119
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "I",  # isort
    # flake8-pep585:
    "UP006",  # non-pep585-annotation
    "UP035",  # deprecated-import
]
